# MCQ-generation

./: .dockerignore  .gitignore  Dockerfile  README.md  apprunner.yaml  buildspec.yml  env.example  locustfile.py  pyproject.toml  requirements.txt  test.py
createAI/: json_output_extraction.py  parse_plan_create_tasks.py  preprocessing.py
demo/: app.py
demo/frontend/: next.config.mjs  package-lock.json  package.json
demo/static/: index.html
demo/utils/: auth_middleware.py  auth_utils.py
models/: req_models.py  table_schema.py
notebook/: 20250914_data_wrangling.ipynb  ReQUESTA_question_generation.ipynb  Workflow_MCQ_Quality.ipynb  baseline_question_generation.ipynb  data_generation.ipynb  fix_encoding_issue.ipynb  mcq_generation.ipynb  question_type_classification.ipynb  test.ipynb  test_createai.ipynb  test_option_shortening.ipynb
prompts/: candidate_generation_prompts.yaml  candidate_selection_prompts.yaml  evaluator_prompts.yaml  fact_prompts.yaml  inference_prompts.yaml  main_idea_prompts.yaml  mcq_answer_extractor_prompts.yaml  mcq_extractor_prompts.yaml  planner.yaml  planner_prompts.yaml  question_type_classifier.yaml  ranking_model.yaml  syntactic_analyzer_prompts.yaml
src/: agent.py  agent_createAI.py  controller_helper.py  database_handler.py  database_query.py  evaluator.py  formatter.py  general.py  mcq_generation.py  normalize_candidates.py  option_shortener_workflow.py  option_shortening_helper.py  planner.py  prompt_fetch.py  text_processing.py  workflow.py
utils/: agent.py  general.py  prompt_fetch.py  prompts.yaml
(+47 files in other folders)
